@@ -1,6 +1,8 @@
 <html>
 <body>
-The PeerSim simulator.
+The PeerSim simulator. A good starting point is {@link peersim.Simulator},
+which contains the main method and which is therefore the entry point of the
+system.
 <h2>Conventions over Exceptions</h2>
 In this documentation we treat exceptions as follows.
 We do not always document three kinds of exceptions:
